// Copyright 2022 Datafuse Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package databend_proto;


message AuthInfo {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  message None {}
  message Password {
    enum PasswordHashMethod {
      PlainText = 0;
      DoubleSha1 = 1;
      Sha256 = 2;
    }
    bytes hash_value = 1;
    PasswordHashMethod hash_method = 2;
  }
  message JWT {}

  oneof info {
    None none = 1;
    Password password = 2;
    JWT jwt = 3;
  }
}

message GrantObject {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  message GrantGlobalObject {}

  message GrantDatabaseObject {
    string catalog = 1;
    string db = 2;
  }

  message GrantTableObject {
    string catalog = 1;
    string db = 2;
    string table = 3;
  }

  oneof object {
    GrantGlobalObject global = 1;
    GrantDatabaseObject database = 2;
    GrantTableObject table = 3;
  }
}

message GrantEntry {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  GrantObject object = 1;
  uint64 privileges = 2;
}

message UserGrantSet {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  repeated GrantEntry entries = 1;
  map<string, bool> roles = 2;
}

message UserQuota {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  uint64 max_cpu = 1;
  uint64 max_memory_in_bytes = 2;
  uint64 max_storage_in_bytes = 3;
}

message UserOption {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  uint64 flags = 1;
  optional string default_role = 2;
}

message UserInfo {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  string name = 1;
  string hostname = 2;
  AuthInfo auth_info = 3;
  UserGrantSet grants = 4;
  UserQuota quota = 5;
  UserOption option = 6;
}

message UserIdentity {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  string username = 1;
  string hostname = 2;
}
